--- a/WebAPINet6.WebApi/appsettings.Development.json
+++ b/WebAPINet6.WebApi/appsettings.Development.json
@@ -1,5 +1,16 @@
 {
   "TTWSConfiguration": {
     "Uri": "http://bgttws10"
+  },
+  "Logging": {
+    "Console": {
+      "IncludeScopes": false,
+      "LogLevel": {
+        "Default": "Trace"
+      }
+    },
+    "LogLevel": {
+      "Default": "Trace"
+    }
   }
 }
