--- a/WebAPINet6.WebApi/appsettings.Production.json
+++ b/WebAPINet6.WebApi/appsettings.Production.json
@@ -1,6 +1,11 @@
 {
   "TTWSConfiguration": {
     "Uri": "https://ttwsxml.ttweb.net"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
   }
 }
 
