--- a/WebAPINet6.WebApi/appsettings.Development.json
+++ b/WebAPINet6.WebApi/appsettings.Development.json
@@ -6,11 +6,11 @@
     "Console": {
       "IncludeScopes": false,
       "LogLevel": {
-        "Default": "Trace"
+        "Default": "Information"
       }
     },
     "LogLevel": {
-      "Default": "Trace"
+      "Default": "Information"
     }
   }
 }
